--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Jet Engines and JavaScript
 #email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  A collection ofcode snippets and some thoughts from Sach Warah, a pilot, engineer and coder. 
+  A collection ofcode snippets and some thoughts from [Sach Warah](/about), a pilot, engineer and coder. 
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://sachwarah.github.io" # the base hostname & protocol for your site
 twitter_username: sachwarah
