--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,6 @@ url: "http://sachwarah.github.io" # the base hostname & protocol for your site
 twitter_username: sachwarah
 github_username: sachwarah
 # Build settings
-markdown: kramdown
+markdown: redcarpet
 # Excerpt stuff
 excerpt_separator: <!--more-->
