--- a/_config.yml
+++ b/_config.yml
@@ -10,5 +10,7 @@ twitter_username: sachwarah
 github_username: sachwarah
 # Build settings
 markdown: redcarpet
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 # Excerpt stuff
 excerpt_separator: <!--more-->
